the final commit after fixing all the layout issue and added deepseek in backend for si service

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -77,4 +77,25 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+  @keyframes fadeInScale {
+    from {
+      opacity: 0;
+      transform: scale(0.95);
+    }
+    to {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+  
+  @keyframes fadeInName {
+    from {
+      opacity: 0;
+      transform: translateY(5px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 }
